kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-spotify-clone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mern-spotify-clone
  template:
    metadata:
      labels:
        app: mern-spotify-clone
    spec:
      containers:
        - name: mern-spotify-clone
          image: xjohnfit/mern-spotify-clone:1.0.0-5
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: "200m"
          ports:
            - containerPort: 5002
      imagePullSecrets:
        - name: regcred
