kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mern-spotify-clone
  labels:
    app: mern-spotify-clone
spec:
  ports:
  - port: 5002
    targetPort: 5002
    nodePort: 30002
  selector:
    app: mern-spotify-clone

  type: NodePort
